# fray

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  README.md  build.gradle.kts  build_poc.sh  default.nix  flake.nix  gradle.properties  kls_database.db  mcp-inspector-config.json  run.sh  run_poc.sh  settings.gradle.kts  shell.nix  threads_report.txt
.claude/: settings.local.json
.github/workflows/: build-and-test.yml  dotnet.yml  main.yml  nix-build.yml  readme_updater.yml  release.yml
.intellijPlatform/localPlatformArtifacts/: bundledModule-intellij.libraries.microba-IC-243.22562.218.xml  bundledModule-intellij.performanceTesting.vcs-IC-243.22562.218.xml  bundledPlugin-com.intellij.copyright-IC-243.22562.218.xml  (+14 more)
benchmark/: build.gradle.kts
benchmarks/: build.gradle.kts
core/: build.gradle.kts
docs/: IDE.md  Instrumentation.md  KnownIssues.md  Operations.md  architecture.md  articles.md  bugs.md  contributing.md  debug_fray.md  mcp.md  usage.md
dotnet/: Directory.Build.props  Fray.sln  README.md
dotnet_migration/: Fray.sln
dotnet_migration/Fray.Profiler/: CMakeLists.txt  ClassFactory.cpp  Profiler.cpp  Profiler.h
dotnet_migration/Fray.Profiler/headers/: ole2.h
example/: build.gradle.kts  settings.gradle.kts
examples/: build.gradle.kts
gradle/: libs.versions.toml
gradle-plugin/: build.gradle.kts
instrumentation/: build.gradle.kts
instrumentation-agent/: build.gradle.kts
integration-test/: build.gradle.kts
integration-tests/: build.gradle.kts
jdk/: build.gradle.kts
junit/: build.gradle.kts
junit-analyzer/: build.gradle.kts
junit-runner/: build.gradle.kts
jvmti/: .clang-format  build.gradle.kts
jvmti/src/cpp/: CMakeLists.txt  runtime.cc
mcp/: build.gradle.kts
mcp-server/: build.gradle.kts
plugins/: build.gradle.kts
rmi/: build.gradle.kts
runtime/: build.gradle.kts
scripts/: analyze_timeline.py  run_jacontebe_target.sh
(+1197 files in other folders)
